# parallel-computing-cw

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
client_server/: client_request.hpp  server_status.hpp
inverted_index/: index_text_files.cpp  index_text_files.hpp  index_worker.cpp  index_worker.hpp  inverted_index.cpp  inverted_index.hpp
python_client/: client.py  utils.py
thread_pool/: thread_pool.cpp  thread_pool.hpp
